2008-12-19  Jonathan Pryor  <jpryor@novell.com>

	* NativeConvert.cs: Add FromRealTimeSignum(), ToRealTimeSignum().
	  Patch thanks to tim.jenks@realtimeworlds.com.
	* RealTimeSignum.cs: Added; structure which represents a real-time
	  signal, a value V such that V >= SIGRTMIN and V <= SIGRTMAX.
	  Patch thanks to tim.jenks@realtimeworlds.com.
	* Stdlib.cs: Add SetSignalAction() and raise() overloads which accept
	  a RealTimeSignum instance.
	  Patch thanks to tim.jenks@realtimeworlds.com.

2008-10-15  Jonathan Pryor  <jpryor@novell.com>

	* Syscall.cs: [Map] Flock, add Timespec, bind nanosleep(2).
	* NativeConvert.generated.cs: Flush (Add TryCopy methods for Flock,
	  Timespec).

2008-01-28  Jonathan Pryor  <jpryor@novell.com>

	* Stdlib.cs: Obsolete Stdlib.signal(), as it's not safe; see also:
	  http://lists.ximian.com/pipermail/mono-devel-list/2008-January/026501.html
	  http://lists.ximian.com/pipermail/mono-devel-list/2008-January/026503.html
	  Add SetSignalAction() as a replacement.

2008-01-22  Sebastien Pouliot  <sebastien@ximian.com>

	* Syscall.cs: Fix Flock.Equals to avoid NRE (and return false if object 
	is null). Found using Gendarme.

2008-01-05  Jonathan Pryor  <jonpryor@vt.edu>

	* Syscall.cs: Add ST_NOEXEC, ST_REMOUNT, ST_BIND to MountFlags.  Patch from
	  Joe Dluzen <jdluzen@gmail.com>.

2007-12-17  Jonathan Pryor  <jonpryor@vt.edu>

	* Syscall.cs: Bind uname(2).

2007-10-25  Jonathan Pryor  <jonpryor@vt.edu>

	* Stdlib.cs: Fix perror(3) so that it works as expected.  (Since errno is
	  cleared during P/Invoke, previously Stdlib.perror("") would always print
	  "Success", which isn't very helpful.)

2007-06-28  Jonathan Pryor  <jonpryor@vt.edu>

	* NativeConvert.generated.cs: Flush (add TryCopy() methods for Utimbuf).
	* Syscall.cs: Map Utimbuf to `struct utimbuf'; needed so that Mono.Fuse can
	  rely on Mono.Posix.dll for copying all native types.

2006-11-14  Jonathan Pryor  <jonpryor@vt.edu>
